--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,82 @@
+#root {
+  overflow: hidden;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .container {
-  max-width: 20em;
+  margin: 1em;
   background: #fee;
-  margin: 1em auto;
   border-radius: 1em;
   padding: 1em;
   text-align: left;
+  transition: height 0.15s ease-in-out;
 }
 
 .container .title {
   margin-top: 0;
   text-align: center;
+}
+
+th {
+  font-weight: bold;
+}
+
+.button {
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.button-push_button-large {
+  border-radius: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  line-height: 1.5;
+  font-size: 1rem;
+}
+
+.button-push_button-primary {
+  background-color: #ffa2ca;
+  color: black;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+  box-shadow 0.15s ease-in-out;
+}
+
+.button-push_button-primary:active {
+  box-shadow: 0 0 0 0.2rem rgba(255, 208, 246, 0.25);
+}
+
+.button-push_button-primary:hover {
+  background-color: #cb7ea0;
+}
+
+.button-push_button-primary:disabled {
+  color: #fff;
+  background-color: #b5b5b5;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.nav {
+  display: flex;
+  position: fixed;
+  align-items: center;
+  width: 100%;
+  bottom: 0;
+  background: #ffeeee;
+}
+
+.nav-item {
+  height: 3em;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-item_current {
+  background: #ffb6b6;
 }
